--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ionic",
   "private": false,
   "version": "1.0.0-rc.5",
-  "codename": "sulfur-suricate",
+  "codename": "tungsten-turkey",
   "repository": {
     "url": "git://github.com/driftyco/ionic.git"
   },
