--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ionic",
   "private": false,
-  "version": "1.0.0-rc.5",
+  "version": "1.0.0",
   "codename": "tungsten-turkey",
   "repository": {
     "url": "git://github.com/driftyco/ionic.git"
