--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ionic",
   "private": false,
   "version": "1.0.0",
-  "codename": "tungsten-turkey",
+  "codename": "uranium-unicorn",
   "repository": {
     "url": "git://github.com/driftyco/ionic.git"
   },
