--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
   "repository": {
     "url": "git://github.com/driftyco/ionic.git"
   },
+  "main": "index.js",
+  "dependencies": {
+    "angular": "^1.3.0 || >1.4.0-beta.0",
+    "angular-animate": "^1.3.0 || >1.4.0-beta.0",
+    "angular-sanitize": "^1.3.0 || >1.4.0-beta.0",
+    "angular-ui-router": "^0.2.0"
+  },
   "devDependencies": {
     "canonical-path": "0.0.2",
     "chalk": "^0.4.0",
