--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ionic-sdk",
   "private": false,
   "version": "1.1.1",
-  "codename": "xenon-xerus",
+  "codename": "yttrium-yeti",
   "repository": {
     "url": "git://github.com/driftyco/ionic.git"
   },
