update main section of bower.json with bundle
This is proposed for two reasons:
1. pulling the JS portion of Ionic into compliance with the bower.json spec ("The entry-point files necessary to use your package. Only one file per filetype."). I am not sure about how to handle the fonts.
2. making build process simpler for use with bower-main-files or bower-installer, as they can read the main section and grab only what is required.

--- a/bower.json
+++ b/bower.json
@@ -12,8 +12,7 @@
   "main": [
     "release/css/ionic.css",
     "release/fonts/*",
-    "release/js/ionic.js",
-    "release/js/ionic-angular.js"
+    "release/js/ionic.bundle.js"
   ],
   "keywords": [
     "mobile",
