--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "ionic-sdk",
   "private": false,
-  "version": "1.1.1",
-  "codename": "yttrium-yeti",
+  "version": "1.2.0",
+  "codename": "zirconium-zebra",
   "repository": {
     "url": "git://github.com/driftyco/ionic.git"
   },
