--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "ionic",
-  "version": "1.2.1",
-  "codename": "amsterdam",
+  "version": "1.2.2",
+  "codename": "barcelona",
   "homepage": "https://github.com/driftyco/ionic",
   "authors": [
     "Max Lynch <max@drifty.com>",
