--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ionic-sdk",
   "private": false,
   "version": "1.2.3",
-  "codename": "copenhagen",
+  "codename": "",
   "repository": {
     "url": "git://github.com/driftyco/ionic.git"
   },
