chore(package): viva la copenhagen

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ionic-sdk",
   "private": false,
   "version": "1.2.4",
-  "codename": "",
+  "codename": "Copenhagen",
   "repository": {
     "url": "git://github.com/driftyco/ionic.git"
   },
