Adapts the bower.json file to use its new ui-router package name

--- a/bower.json
+++ b/bower.json
@@ -51,6 +51,6 @@
     "angular": "1.4.3",
     "angular-animate": "1.4.3",
     "angular-sanitize": "1.4.3",
-    "angular-ui-router": "0.2.13"
+    "ui-router": "0.2.13"
   }
 }
