--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "ionic-sdk",
   "private": false,
-  "version": "1.2.4",
-  "codename": "Copenhagen",
+  "version": "1.2.5",
+  "codename": "Lyon",
   "repository": {
     "url": "git://github.com/driftyco/ionic.git"
   },
