phantomjs upgrade in package json, removed annoying line from karma.conf, made one unit test run only in chrome to account for phantomjs bug

--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "karma-coverage": "^0.4.2",
     "karma-jasmine": "~0.1.5",
     "karma-mocha-reporter": "^1.0.2",
-    "karma-phantomjs-launcher": "~0.1.2",
+    "karma-phantomjs-launcher": "^1.0.0",
     "karma-sauce-launcher": "~0.2.0",
     "karma-script-launcher": "~0.1.0",
     "lodash": "^2.4.1",
@@ -55,6 +55,7 @@
     "node-libs-browser": "^0.5.2",
     "node-twitter-api": "^1.2.2",
     "node-uuid": "^1.4.1",
+    "phantomjs-prebuilt": "^2.1.7",
     "protractor": "^0.23.1",
     "q": "^1.0.1",
     "request": "^2.36.0",
