--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ionic-sdk",
   "private": false,
   "version": "1.3.0",
-  "codename": "Copenhagen",
+  "codename": "delhi",
   "repository": {
     "url": "git://github.com/driftyco/ionic.git"
   },
