--- a/core/package.json
+++ b/core/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@stencil/core": "^2.4.0",
     "ionicons": "^5.5.0",
+    "resize-observer-polyfill": "^1.5.1",
     "tslib": "^1.10.0"
   },
   "devDependencies": {
