--- a/core/package.json
+++ b/core/package.json
@@ -37,21 +37,28 @@
     "tslib": "^1.10.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.10",
     "@jest/core": "^26.6.3",
     "@rollup/plugin-node-resolve": "^8.4.0",
     "@rollup/plugin-virtual": "^2.0.3",
     "@stencil/sass": "1.3.2",
     "@stencil/vue-output-target": "^0.4.1",
+    "@storybook/addon-actions": "^6.1.21",
+    "@storybook/addon-essentials": "^6.1.21",
+    "@storybook/addon-links": "^6.1.21",
+    "@storybook/web-components": "^6.1.21",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.6.0",
     "@types/puppeteer": "5.4.3",
     "@types/swiper": "5.4.0",
     "aws-sdk": "^2.738.0",
+    "babel-loader": "^8.2.2",
     "clean-css-cli": "^4.1.11",
     "domino": "^2.1.6",
     "fs-extra": "^9.0.1",
     "jest": "^26.4.1",
     "jest-cli": "^26.4.1",
+    "lit-html": "^1.3.0",
     "np": "^6.4.0",
     "pixelmatch": "4.0.2",
     "puppeteer": "^7.0.1",
@@ -93,7 +100,9 @@
     "test.screenshot.ci": "stencil test --e2e --screenshot --screenshot-connector=scripts/screenshot/ci.js --ci",
     "test.watch": "jest --watch --no-cache",
     "test.treeshake": "node scripts/treeshaking.js dist/index.js",
-    "validate": "npm run lint && npm run test && npm run build && npm run test.treeshake"
+    "validate": "npm run lint && npm run test && npm run build && npm run test.treeshake",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "author": "Ionic Team",
   "license": "MIT",
