--- a/core/package.json
+++ b/core/package.json
@@ -60,10 +60,12 @@
     "jest-cli": "^26.4.1",
     "lit-html": "^1.3.0",
     "np": "^6.4.0",
+    "npm-run-all": "^4.1.5",
     "pixelmatch": "4.0.2",
     "puppeteer": "^7.0.1",
     "rollup": "^2.26.4",
     "sass": "^1.26.10",
+    "storybook-addon-designs": "^5.4.5",
     "stylelint": "^13.6.1",
     "stylelint-order": "^4.1.0",
     "swiper": "5.4.1",
@@ -102,7 +104,10 @@
     "test.treeshake": "node scripts/treeshaking.js dist/index.js",
     "validate": "npm run lint && npm run test && npm run build && npm run test.treeshake",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "npm run build && build-storybook",
+    "start:stencil": "stencil build --watch",
+    "build:stencil": "stencil build",
+    "story": "npm run build:stencil && npm-run-all --parallel start:stencil storybook"
   },
   "author": "Ionic Team",
   "license": "MIT",
