--- a/core/package.json
+++ b/core/package.json
@@ -43,6 +43,7 @@
     "@rollup/plugin-virtual": "^2.0.3",
     "@stencil/sass": "1.3.2",
     "@stencil/vue-output-target": "^0.4.1",
+    "@storybook/addon-a11y": "^6.1.21",
     "@storybook/addon-actions": "^6.1.21",
     "@storybook/addon-essentials": "^6.1.21",
     "@storybook/addon-links": "^6.1.21",
@@ -66,6 +67,7 @@
     "rollup": "^2.26.4",
     "sass": "^1.26.10",
     "storybook-addon-designs": "^5.4.5",
+    "storybook-addon-themes": "^6.0.1",
     "stylelint": "^13.6.1",
     "stylelint-order": "^4.1.0",
     "swiper": "5.4.1",
