--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ UserInterfaceState.xcuserstate
 .env
 
 .package.tmp.json
+package-lock.json
 
 src/themes/version.scss
 scripts/e2e/webpackEntryPoints.json
