--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -520,7 +520,7 @@ workflows:
       #liamtest    requires: [build-vue-router]
       #liamtest- test-vue-router-spec:
       #liamtest    requires: [build-vue-router]
-      - install-vue-test-app
+      - install-vue-test-app:
           requires: [build-vue, build-vue-router]
       #liamtest- test-vue-spec:
       #liamtest    requires: [install-vue-test-app, build-vue, build-vue-router]
