be more specific with persisting

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -199,9 +199,10 @@ jobs:
           command: npm run build
           working_directory: /tmp/workspace/packages/vue
       - persist_to_workspace:
-          root: /tmp/workspace
+          root: /tmp/workspace/packages/vue
           paths:
-            - "*"
+            - node_modules
+            - dist
 
   build-vue-router:
     <<: *defaults
@@ -222,9 +223,10 @@ jobs:
           command: npm run build
           working_directory: /tmp/workspace/packages/vue-router
       - persist_to_workspace:
-          root: /tmp/workspace
+          root: /tmp/workspace/packages/vue-router
           paths:
-            - "*"
+            - node_modules
+            - dist
 
   test-core-clean-build:
     <<: *defaults
@@ -432,9 +434,9 @@ jobs:
           command: CYPRESS_CACHE_FOLDER=/tmp/workspace/packages/vue/test-app npm install
           working_directory: /tmp/workspace/packages/vue/test-app
       - persist_to_workspace:
-          root: /tmp/workspace
+          root: /tmp/workspace/packages/vue/test-app
           paths:
-            - "*"
+            - node_modules
 
   test-vue-spec:
     <<: *defaults
