--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -115,6 +115,7 @@ jobs:
       - persist_to_workspace:
           root: /tmp/workspace
           paths:
+            - angular/node_modules
             - angular/dist
 
   build-angular-server:
