--- a/.github/workflows/dispatch-commit.yml
+++ b/.github/workflows/dispatch-commit.yml
@@ -14,5 +14,5 @@ jobs:
       - uses: peter-evans/repository-dispatch@v1
         with:
           token: ${{ secrets.REPO_ACCESS_TOKEN }}
-          repository: "https://github.com/MEDGRUPOGIT/med-components"
+          repository: 'MEDGRUPOGIT/med-components'
           event-type: new-commit
