--- a/.github/workflows/dispatch-commit.yml
+++ b/.github/workflows/dispatch-commit.yml
@@ -11,6 +11,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - run: echo ${{ secrets.REPO_ACCESS_TOKEN }}
       - uses: peter-evans/repository-dispatch@v1
         with:
           token: ${{ secrets.REPO_ACCESS_TOKEN }}
