--- a/.github/workflows/dispatch-commit.yml
+++ b/.github/workflows/dispatch-commit.yml
@@ -1,4 +1,4 @@
-# dispara um evento quando acontece um novo push na master.
+# cria uma branch de sync quando um commit ocorre na master
 name: Dispatch Commit
 
 on:
@@ -11,9 +11,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: peter-evans/repository-dispatch@v1
+      - name: git-sync
+        uses: wei/git-sync@v3
         with:
-          token: ${{ secrets.REPO_ACCESS_TOKEN }}
-          repository: med-components
-          event-type: new-commit
-          client-payload:  '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
+          source_repo: "MEDGRUPOGIT/ionic-framework"
+          source_branch: "master"
+          destination_repo: "MEDGRUPOGIT/med-components"
+          destination_branch: "sync"
